--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			<p>Matrix Size: <input type="text" id="size" onchange="changeSize(this.value);" /></p>
 			<hr />
 			<div id="inputs">
+				Enter matrix size
 			</div>
 			<br />
 			<button onclick = "calculate();">Calculate</button>
