updated to electron project structure

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<title>Matrix Tools</title>
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
-	<script src="scripts/calculator.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="calculator.js"></script>
 </head>
 
 <body onload="initialize();">
